Highlight Targeted Actor by Cross Hair

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode=/Script/ThirdPerson.MyMainGameMode
+GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_MyMainGameMode.BP_MyMainGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
